View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022682 | Open CASCADE | OCCT:DRAW | public | 2011-07-22 18:52 | 2012-04-20 10:17 |
Reporter | Assigned To | kgv | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | All | ||||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022682: Draw options -v and -f do not influent to AISInitViewer command. | ||||
Description | see caf 003 tests. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR22682 is ready to be reviewed. |
|
CR22682 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Workbench KAS:dev:apn-22682-occt was created from git branch CR22682 (and apn-22682-products from svn trunk) and compiled on Linux platform. There are not regressions in apn-22682-products regarding to KAS:dev:products-20120330-opt See results in /QADisk/occttests/results/KAS/dev/apn-22682-products_04042012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120330-opt_30032012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-07-22 18:52 |
|
Assigned To | bugmaster => kgv |
2011-07-22 18:52 |
|
Status | new => assigned |
2012-04-02 12:29 | kgv | Relationship added | related to 0022385 |
2012-04-02 12:31 | kgv | Note Added: 0020234 | |
2012-04-02 12:31 | kgv | Assigned To | kgv => san |
2012-04-02 12:31 | kgv | Status | assigned => resolved |
2012-04-04 17:23 |
|
Note Added: 0020259 | |
2012-04-04 17:23 |
|
Assigned To | san => bugmaster |
2012-04-04 17:23 |
|
Status | resolved => reviewed |
2012-04-04 17:27 | apn | Assigned To | bugmaster => apn |
2012-04-04 17:27 | apn | Fixed in Version | EMPTY => |
2012-04-05 10:44 |
|
Assigned To | apn => aan |
2012-04-05 11:24 |
|
Note Added: 0020268 | |
2012-04-05 14:53 |
|
Test case number | => Not needed |
2012-04-05 16:01 |
|
Status | reviewed => tested |
2012-04-10 10:18 | kgv | Changeset attached | => occt master 10d41e29 |
2012-04-10 10:19 | kgv | Assigned To | aan => kgv |
2012-04-10 10:19 | kgv | Status | tested => verified |
2012-04-10 10:19 | kgv | Resolution | open => fixed |
2012-04-20 10:17 |
|
Product Version | => 6.5.2 |
2012-04-20 10:17 |
|
Target Version | => 6.5.3 |