0022682: Draw options -v and -f do not influent to AISInitViewer command

Corrected ViewerTest_Tool::MakeViewer() - window
was mapped before virtual flag was set.